when we see that the mouseDown event was cancelled, stop tracking drags. This allows mousedown/move/up events to be processed by webpages w/out us interfering. r=joki, bug 43258.